--- a/artist.html
+++ b/artist.html
@@ -3,48 +3,69 @@
 
 <head>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Artist</title>
-    <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Artist</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+<body style="background-color:#A49E65;">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: brown;">
+    <a href="index.html" class="nav-brand" style="font-size: 30px;">Hau Pham</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
--->
-<nav class="navbar navbar-light" style="background-color: brown;">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Hau Pham</a>
-            <a class="nav-link" href="#">Artist</a>
-            <a class="nav-link" href="#">Gallery</a>
-            <a class="nav-link disabled">Contact</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <div class="artist">
-    <image src = "portrait.jpeg" ></image>
-    <p>Hau Pham was a leading artist during the Vietnamese Lacquer painting's most prosperous time.  Lacquer painting uses a toxic lacquer harvested from one region of the country. It requires months of application and sanding back layers of paint to build up the image.
+          <a style="color: #93AF88;" class="nav-link" href="artist.html">Artist</a>
+          <a style="color: #93AF88;" class="nav-link" href="Gallery.html">Gallery</a>
+          <a style="color: #93AF88;" class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+    </div>
 
-        Hau's works focus on nature and its raw beauty before industrialization.
-        His paintings demonstrate a level of lacquer painting that was mastered.</p>
-      </div>
+  </nav>
+  <div class="portrait">
+    <image src="portrait.jpeg"></image>
+    <div class="bio">
+      <h1>Pham Hau</h1>
+      <p>Born in 1903 in the province of Ha Dong, Pham Hau graduated in 1934 after five years of his studies at the
+        École des Beaux Arts de Hanoi. Under the tutelage of professor and painter Joseph Inguimberty, Pham Hau spent
+        many of his days in the École's Lacquer Workshop, where he also became friends with the likes of To Ngoc Van,
+        Tran Quang Tran, Nguyen Khang, Tran Van Can and Nguyen Gia Tri.
+      </p>
+      <p>
+        However, it was not until the 1940s that Pham Hau gained notoriety for the skilled lacquer technique that would
+        eventually become his hallmark. Along with fellow Nguyen Gia Tri, École des Beaux Arts and veteran Inguimberty,
+        the two artists brought public attention to their skilled and intricate works, and soon gained a reputation for
+        being the Les Maitres Lacquers de Hanoi.
+
+      </p>
+      <p>
+        The Golden Age of Vietnamese Paintings (1930-1945), which came as a result of such artists, left remarkable and
+        exquisite works of art that aimed to capture the essence of Vietnamese aesthetics. The classically styled, yet
+        subtle new medium lacquer brought forth a revival. The Lacquer Revival itself became both an important movement
+        and a new chapter in Modern Vietnamese art. One that inspired French visionaries and Vietnamese artists, while
+        also becoming renowned globally as the specialty of Asian art in that era.
+
+      </p>
+      <p>
+        Pham Hau's pioneering vision made him one of his generation's best and his works are considered of limited
+        numbers. This wonderful piece represents beauty, composition and perfection, which truely reflects the dexterity
+        of Vietnamese Modern Paintings.
+      </p>
+
+    </div>
+  </div>
 </body>
 
 </html>
