--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,53 @@
-<div class="container">
-    <h1 style=color:#7A3E25>Contact form</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <title>Contact</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+</head>
+
+<body style="background-image: url(bg1.png);">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: brown;">
+    <a href="index.html" class="nav-brand" style="font-size: 30px;">Hau Pham</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ">
+        <li class="nav-item">
+
+          <a style="color: #93AF88;" class="nav-link" href="artist.html">Artist</a>
+          <a style="color: #93AF88;" class="nav-link" href="Gallery.html">Gallery</a>
+          <a style="color: #93AF88;" class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+
+  </nav>
+
+
+
+  <div class="container">
+    <h1 style=color:#7A3E25>Contact Form</h1>
+    <h3 style="font-family: 'Cinzel Decorative', cursive; color:#7A3E25">if you would like to know more about Hau Pham
+      and his work</h3>
 
     <form action="action_page.php">
-  
-      <label for="fname">Name</label>
+
+      <label for="fname" style="font-family: 'Italiana', serif;">Name</label>
       <input type="text" id="fname" name="firstname" placeholder="Your first and last name">
-  
-      <label for="lname">Contact</label>
+
+      <label for="lname" style="font-family: 'Italiana', serif;">Contact</label>
       <input type="text" id="lname" name="lastname" placeholder="Email Address">
-  
-      <label for="subject">Message</label>
+
+      <label for="subject" style="font-family: 'Italiana', serif;">Message</label>
       <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-  
-      <input type="submit" value="Submit">
-  
+
+      <input style="font-family: 'Italiana', serif;" type="submit" value="Submit">
+
     </form>
-  </div>
-  <link rel="stylesheet" href="style.css">
-  
+
+    <link rel="stylesheet" href="style.css">
